<!--

    Copyright (C) 2023 Christian Pöcksteiner
(christian.poecksteiner@aon.at)
    Licensed under the Apache License, Version
2.0 (the "License").
    You may not use this file except in compliance with the
License.
    You may obtain a copy of the License at
https://www.apache.org/licenses/LICENSE-2.0
    Unless required by applicable
law or agreed to in writing, software
    distributed under the License is
distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.
    See the License for the specific language
governing permissions and
    limitations under the License.

-->
<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.cpo1964</groupId>
	<artifactId>selenium-lib</artifactId>
	<version>1.0.50</version>
	<packaging>jar</packaging>
	<name>${project.name}</name>
	<description>A fine tuned function library based on selenium webdriver api</description>
	<url>https://github.com/cpo1964/selenium-lib</url>
	<licenses>
		<license>
			<name>MIT</name>
			<url>LICENSE</url>
		</license>
	</licenses>
	<properties>
		<project.name>selenium-lib</project.name>
		<owner>com.github.cpo1964</owner>
		<email>christian.poecksteiner@aon.at</email>
		<organizationName>com.github.cpo1964</organizationName>
		<project.inceptionYear>2023</project.inceptionYear>
		<year>2023</year>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<license.dir>${basedir}</license.dir>
		<webdrivermanager.version>[6.3.2,)</webdrivermanager.version><!-- 5.9.1 -->
		<selenium-java.version>4.8.1</selenium-java.version>
		<!-- 4.7.2 -->
		<extentreports.version>5.0.9</extentreports.version>
		<pdfextentreporter.version>1.3.2</pdfextentreporter.version>
		<slf4j.version>2.0.6</slf4j.version>
		<!--log4j2.version>2.19.0</log4j2.version-->
		<log4j2.version>2.18.0</log4j2.version>
		<junit4.version>4.13.2</junit4.version>
		<junit5.version>5.9.2</junit5.version>
		<poi.version>[4.1.1,)</poi.version>
		<httpclient.version>[4.5.13,)</httpclient.version>
		<commons-lang.version>2.6</commons-lang.version>
		<java.version>11</java.version>
	</properties>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.9.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.13</version>
				<extensions>true</extensions>
				<executions>
					<execution>
						<phase>deploy</phase>
						<goals>
							<goal>deploy</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<serverId>ossrh</serverId>
					<!--
					<serverId>nexus</serverId>
					<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
					-->
					<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
			<!-- License information -->
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>4.2.rc2</version>
				<configuration>
					<properties>
						<owner>Christian Pöcksteiner</owner>
						<year>${project.inceptionYear}</year>
						<email>christian.poecksteiner@aon.at</email>
					</properties>
					<inlineHeader>
						<![CDATA[
Copyright (C) ${year} ${owner} (${email})
Licensed under the Apache License, Version 2.0 (the "License").
You may not use this file except in compliance with the License.
You may obtain a copy of the License at
        https://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
]]>
					</inlineHeader>
					<excludes>
						<exclude>src/test/resources/**</exclude>
						<exclude>**/release-pom.xml</exclude>
						<exclude>docs/**</exclude>
						<exclude>.config/**</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>deploy</id>
			<build>
				<plugins>
					<!-- usage: mvn source:jar -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<!--usage: mvn javadoc:jar-->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.5.0</version>
						<configuration>
							<show>public</show>
							<nohelp>true</nohelp>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<!--
					usage: mvn verify -Dgpg.passphrase=thephrase
					-->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<keyname>
										5C1F10600B4AC9EEC9EDE1CF5F6BA593CDD2BB03</keyname>
									<passphraseServerId>http://keys.gnupg.net</passphraseServerId>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<scm>
		<connection>scm:git:ssh://github.com/cpo1964/selenium-lib.git</connection>
		<developerConnection>scm:git:ssh://github.com:cpo1964/selenium-lib.git</developerConnection>
		<url>https://github.com/cpo1964/selenium-lib</url>
	</scm>
	<developers>
		<developer>
			<name>Christian Pöcksteiner</name>
			<email>christian.poecksteiner@aon.at</email>
			<organization>com.github.cpo1964</organization>
			<organizationUrl>http://github.com/cpo1964/</organizationUrl>
		</developer>
	</developers>
	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.28</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>${webdrivermanager.version}</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-http-jdk-client</artifactId>
			<version>4.5.0</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-devtools-v110</artifactId>
			<version>${selenium-java.version}</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium-java.version}</version>
			<exclusions>
				<exclusion>
					<groupId>io.opentelemetry</groupId>
					<artifactId>
						opentelemetry-exporter-logging
					</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>${extentreports.version}</version>
		</dependency>
		<!--
		https://mvnrepository.com/artifact/tech.grasshopper/pdfextentreporter -->
		<dependency>
			<groupId>tech.grasshopper</groupId>
			<artifactId>pdfextentreporter</artifactId>
			<version>${pdfextentreporter.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${poi.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>${httpclient.version}</version>
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>${commons-lang.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-1.2-api</artifactId>
			<version>${log4j2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
			<scope>test</scope>
		</dependency>
		<!--
		-->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit4.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<distributionManagement>
	  <snapshotRepository>
	    <id>ossrh</id>
	    <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
	  </snapshotRepository>
	  <repository>
	    <id>ossrh</id>
	    <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
	  </repository>
	</distributionManagement>
	<!--
	<distributionManagement>
		<snapshotRepository>
			<id>nexus</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>
				https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
-->
</project>
